Fixed the colors of icons on Safari browsers.

--- a/styles.css
+++ b/styles.css
@@ -232,7 +232,7 @@ h3 {
 
 .icon a {
     text-decoration: none; /* To change icons to black in safari mobile browsers */
-    color: #000;
+    color: #fff;
 }
 
 i {
